v6.1.0/_sources/generated/pcdsdevices.beam_stats.BeamEnergyRequestACRWait.rst.txt
pcdsdevices.beam\_stats.BeamEnergyRequestACRWait
================================================

.. currentmodule:: pcdsdevices.beam_stats

.. autoclass:: BeamEnergyRequestACRWait

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - setpoint (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:USER:MCC:EPHOT{line_text}:SET{bunch}``
          - The setpoint PV that acr listens on to update the vernier or undulator PVs as appropriate.
          - hinted
          - Inherited from :class:`~pcdsdevices.beam_stats.BeamEnergyRequest`
    
        * - ref (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:USER:MCC:EPHOT{line_text}:REF{bunch}``
          - A reference PV for the photon energy at the nominal position of the vernier or undulator.
          - normal
          - Inherited from :class:`~pcdsdevices.beam_stats.BeamEnergyRequest`
    
        * - done (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``SIOC:SYS0:ML07:{acr_status_suffix}``
          - PV that is 0 while the motors are moving and 1 when ACR is ready for a new request. ACR can pick which of these PVs to use to report status.
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: move
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: actuate
    .. autoattribute:: actuate_value
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: done_value
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: k_hutch
    .. autoattribute:: kind
    .. autoattribute:: l_hutch
    .. autoattribute:: limits
    .. autoattribute:: line_text_dict
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: position
    .. autoattribute:: put_complete
    .. autoattribute:: readback
    .. autoattribute:: settle_time
    .. autoattribute:: stop_signal
    .. autoattribute:: stop_value
    .. autoattribute:: timeout
    
    